--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
 	
 	<!-- THE BIG META -->
-	<title>Adventures With Anxiety!</title>  <!-- TRANSLATE -->
-	<meta name="description" content="A story-game about a human and their anxiety. You play as the anxiety." />  <!-- TRANSLATE: content -->
+	<title>Приключения с Тревогой!</title>  <!-- TRANSLATE -->
+	<meta name="description" content="Сюжетная игра о человеке и его тревоге. Вы играете за тревогу." />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Adventures With Anxiety!">  <!-- TRANSLATE: content -->
-	<meta name="twitter:description" content="A story-game about a human and their anxiety. You play as the anxiety.">  <!-- TRANSLATE: content -->
-	<meta name="twitter:image" content="https://ncase.me/anxiety/sharing/thumb.png">
+	<meta name="twitter:title" content="Приключения с Тревогой!">  <!-- TRANSLATE: content -->
+	<meta name="twitter:description" content="Сюжетная игра о человеке и его тревоге. Вы играете за тревогу.">  <!-- TRANSLATE: content -->
+	<meta name="twitter:image" content="https://kanress.github.io/AWA/sharing/thumb.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Adventures With Anxiety!">  <!-- TRANSLATE: content -->
+	<meta property="og:title" content="Приключения с Тревогой!">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://ncase.me/anxiety/">
-	<meta property="og:image" content="https://ncase.me/anxiety/sharing/thumb.png">
-	<meta property="og:description" content="A story-game about a human and their anxiety. You play as the anxiety.">  <!-- TRANSLATE: content -->
-	<meta property="og:site_name" content="Adventures With Anxiety!">  <!-- TRANSLATE: content -->
+	<meta property="og:url" content="https://kanress.github.io/AWA/">
+	<meta property="og:image" content="https://kanress.github.io/AWA/sharing/thumb.png">
+	<meta property="og:description" content="Сюжетная игра о человеке и его тревоге. Вы играете за тревогу.">  <!-- TRANSLATE: content -->
+	<meta property="og:site_name" content="Приключения с Тревогой!">  <!-- TRANSLATE: content -->
 	
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="styles/game.css">
@@ -94,7 +94,7 @@
 
 		<!-- TRANSLATE THIS -->
 		<p style="margin-top: 0.6em;">
-			<i style="color:#ff4040">Adventures With Anxiety</i> is about, well, anxiety.
+			<i style="color:#ff4040">Приключения с Тревогой</i> is about, well, anxiety.
 		</p>
 		<p>
 			But I've made this <i>for</i> folks with anxiety disorder, like myself.
@@ -242,7 +242,7 @@ You're already free to reuse &amp; remix this for any use!
 <div class="corner-text" id="topright">
 Share on an anxiety-app:
 <span id="sharing_title">
-	Adventures With Anxiety!
+	Приключения с Тревогой!
 </span>
 <span id="sharing_desc">
 	I just played this story-game about a human and their anxiety! You play *as* the anxiety. 😱
