--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<meta charset="utf-8">
 	<!-- THE BIG META -->
 	<title>Приключения с Тревогой!</title>  <!-- TRANSLATE -->
 	<meta name="description" content="Сюжетная игра о человеке и его тревоге. Вы играете за тревогу." />  <!-- TRANSLATE: content -->
@@ -46,10 +46,10 @@
 		<span id="cta_text1">
 			<div class="mini-icon" pic="click" style="top:3px;"></div>
 			<span id="instructions_if_not_mobile">
-				click or spacebar <!-- TRANSLATE THIS -->
+				Щёлкните или нажмите на пробел <!-- TRANSLATE THIS -->
 			</span>
 			<span id="instructions_if_mobile" style="display:none">
-				tap anywhere <!-- TRANSLATE THIS -->
+				Нажмите в любом месте <!-- TRANSLATE THIS -->
 			</span>
 		</span>
 		<span id="cta_text2">
@@ -77,7 +77,7 @@
 		<div>
 			<!-- TRANSLATE THIS -->
 			paused
-			<div>click anywhere to keep freaking out</div>
+			<div>Нажмите в любом месте, чтобы продолжать волноваться</div>
 		</div>
 	</div>
 
@@ -94,26 +94,26 @@
 
 		<!-- TRANSLATE THIS -->
 		<p style="margin-top: 0.6em;">
-			<i style="color:#ff4040">Приключения с Тревогой</i> is about, well, anxiety.
+			<i style="color:#ff4040">Приключения с Тревогой</i> о, ну, тревожности.
 		</p>
 		<p>
-			But I've made this <i>for</i> folks with anxiety disorder, like myself.
-			I hope it can help you see – with humor – how anxiety works.
-			And, just maybe, reduce the fear of fear itself.
+			Но я сделала это <i>для</i> людей с таким же тревожным расстройством, как и у меня.
+			Я надеюсь, что это поможет тебе увидеть - с юмором - как работает тревожность.
+			И, возможно, ослабит страх самого страха.
 		</p>
 		<p>
-			There's also badly-drawn stick figures and a hyperactive wolf.
-			Enjoy!
+			Также будут плохо прорисованные человечки и гиперактивный волк.
+			Наслаждайтесь!
 		</p>
 		<p style="color:#999; font-size: 16px; line-height: 1.3em;">
-			other notes: alcohol abuse, sexuality<span class="hide-if-cuss-free">, a @✩$!load of swearing</span>
+			Другие примечания: алкоголь, темы сексуального подтекста<span class="hide-if-cuss-free">, д@✩$я ругани</span>
 		</p>
 		<p>
-			<a target="_blank" href="https://ncase.me/mental-health/">mental health tips &amp; resources</a>
+			<a target="_blank" href="https://ncase.me/mental-health/">Материалы о ментальном здоровье</a>
 			&#x1f517;
 		</p>
 		<div id="cn_ok" onclick="publish('hide_cn');" style="float:none">
-			ok <div class="mini-icon" pic="ok" style="top: 3px;"></div>
+			Ок <div class="mini-icon" pic="ok" style="top: 3px;"></div>
 		</div>
 
 	</div>
@@ -124,29 +124,30 @@
 		
 			<!-- TRANSLATE THIS -->
 			<div style="font-size: 40px; margin-top: 42px; line-height: 30px;">
-				mental health
-				<a href="https://ncase.me/mental-health/" target="_blank">resources</a>
+				<a href="https://ncase.me/mental-health/" target="_blank">Материалы</a> о ментальном здоровье
+			</div>
+  
 			</div>
 
 			<div style="margin-top: 26px; color: #999;">
-				&mdash; or &mdash;
+				&mdash; или &mdash;
 			</div>
 			
 			<div style="font-size: 25px; text-align: left; width: 170px;
-						margin-left: 165px; line-height: 25px; margin-top: 31px;">
+						margin-left: 165px; line-height: 25px; margin-top: 15.5px;">
 				
 				<!-- TRANSLATE ALL THIS -->
 				<div>
-					play more of
-					<a href="https://ncase.me" target="_blank">my shtuff</a>
+					Поиграйте в другие
+					<a href="https://ncase.me" target="_blank">мои штучки</a>
 				</div>
 				<div style="margin-top: 32px;">
-					throw coins<br>at me
-					<a href="https://www.patreon.com/ncase" target="_blank">on Patreon</a>
+					Подкинь<br>мне монеток
+					<a href="https://www.patreon.com/ncase" target="_blank">на Patreon</a>
 				</div>
 				<div style="margin-top: 28px;">
-					please your ear-holes with Monplaisir's
-					<a href="https://chezmonplaisir.bandcamp.com/album/anxiety" target="_blank">original soundtrack</a>
+					Порадуйте свои уши
+					<a href="https://chezmonplaisir.bandcamp.com/album/anxiety" target="_blank">оригинальным саундтреком</a>
 				</div>
 
 			</div>
@@ -154,7 +155,7 @@
 			<div id="replay"></div>
 
 			<div style="clear:both;"></div>
-			<div id="close_about" style="margin: 0; float: right; margin-top: 20px;">close</div> <!-- TRANSLATE -->
+			<div id="close_about" style="margin: 0; float: right; margin-top: 20px;font-size: 12px">Закрыть</div> <!-- TRANSLATE -->
 
 		</div>
 	</div>
@@ -167,16 +168,16 @@
 		</div>
 		<div style="float: right; width: 135px; height: 63px;">
 			<!-- TRANSLATE THIS -->
-			And advance
-			<div id="text_automatic_toggle">on click</div>
+			Продвигайся
+			<div id="text_automatic_toggle">по клику</div>
 		</div>
 		<div style="clear:both"></div>
 		<span id="volume_options">
-			<div>Volume:</div> <!-- TRANSLATE -->
+			<div>Громкость:</div> <!-- TRANSLATE -->
 			<input id="volume_slider" type="range" min=0 max=1 value=1 step="0.01"/>
 		</span>
 		<div id="options_ok">
-			ok <div class="mini-icon" pic="ok" style="top: 3px;"></div> <!-- TRANSLATE -->
+			Ок <div class="mini-icon" pic="ok" style="top: 3px;"></div> <!-- TRANSLATE -->
 		</div>
 	</div>
 
@@ -195,23 +196,23 @@
 <!-- TRANSLATE ALL OF THIS -->
 
 <div class="corner-text" id="topleft">
-Created by
+Создано
 <a href="https://ncase.me/" target="_blank">Nicky Case</a>
 <br>
-Music by
+Музыка от
 <a href="https://loyaltyfreakmusic.com" target="_blank">Monplaisir</a>
 <br>
-Extra code by
+Дополнительный код от
 <a href="https://spacie.me/" target="_blank">Spacie</a>
 <br>
-<a href="https://github.com/ncase/anxiety#full-credits" target="_blank">Full credits</a>
+<a href="https://github.com/ncase/anxiety#full-credits" target="_blank">Полные титры</a>
 <br><br>
 
-Fan-Made Translations!
+Другие переводы!
+<br>
+<a href="https://ncase.me/anxiety/">Original in English</a>
 <br>
 <a href="https://nathsom.github.io/ncase-anxiety/">Français</a>
-<br>
-<a href="//notdotteam.github.io/anxiety/">Русский</a>
 <br>
 <a href="https://lucasgcb.github.io/anxiety/">Português do Brasil</a>
 <br>
@@ -227,25 +228,25 @@ Fan-Made Translations!
 <br>
 ...
 <br>
-<a href="https://github.com/ncase/anxiety#how-to-translate" target="_blank">(make your own?)</a>
+<a href="https://github.com/ncase/anxiety#how-to-translate" target="_blank">(Создать ещё перевод?)</a>
 </div>
 
 <div class="corner-text" id="bottomleft">
 <img src="sprites/about/cc0.png" height="30" style="opacity:0.7"/>
 <br>
-You're already free to reuse &amp; remix this for any use!
-<a href="https://github.com/ncase/anxiety#public-domain" target="_blank">(huh?)</a>
+Ты можешь переиспользовать и изменять это на любой основе!
+<a href="https://github.com/ncase/anxiety#public-domain" target="_blank">(чего?)</a>
 <br>
-<a href="https://github.com/ncase/anxiety" target="_blank">Get the full source code</a>
+<a href="https://github.com/ncase/anxiety" target="_blank">Получить полный исходный код</a>
 </div>
 
 <div class="corner-text" id="topright">
-Share on an anxiety-app:
+Поделитесь в приложениях, вызывающих у вас тревогу:
 <span id="sharing_title">
 	Приключения с Тревогой!
 </span>
 <span id="sharing_desc">
-	I just played this story-game about a human and their anxiety! You play *as* the anxiety. 😱
+	Я сыграл(а) в эту сюжетную игру о человеке и его тревоге! Ты играешь *за* тревогу. 😱
 </span>
 <div id="share">
 	<a id="share_link_fb" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fncase.me%2Fanxiety%2F" target="_blank" class="no_deco">
@@ -261,16 +262,16 @@ Share on an anxiety-app:
 	</a>
 </div>
 <br>
-For your sharing pleasure:<br>
-<a href="sharing" target="_blank">Videos &amp; Thumbnails</a>
+Для вашего удовольствия:<br>
+<a href="sharing" target="_blank">Видео и превью</a>
 </div>
 
 <div class="corner-text" id="bottomright">
-<a href="https://ncase.me/mental-health/" target="_blank">Mental Health Tips &amp; Resources</a>
+<a href="https://ncase.me/mental-health/" target="_blank">Материалы о ментальном здоровье</a>
 <span class="hide-if-cuss-free">
 	<br><br>
-	<a href="?c=1">Cuss-Free Mode</a><br>
-	(for educators who want to avoid an awkward PTA meeting)
+	<a href="?c=1">Цензурная версия</a><br>
+	(для преподавателей которые хотят избежать неловкой встречи с родительским комитетом)
 </span>
 </div>
 
