--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="styles/game.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
 
@@ -76,7 +75,7 @@
 	<div id="paused">
 		<div>
 			<!-- TRANSLATE THIS -->
-			paused
+			Пауза
 			<div>Нажмите в любом месте, чтобы продолжать волноваться</div>
 		</div>
 	</div>
@@ -93,20 +92,20 @@
 	<div id="content_notes">
 
 		<!-- TRANSLATE THIS -->
-		<p style="margin-top: 0.6em;">
+		<p style="margin-top: 0.6em; font-size: 16px">
 			<i style="color:#ff4040">Приключения с Тревогой</i> о, ну, тревожности.
 		</p>
-		<p>
+		<p style="font-size: 16px">
 			Но я сделала это <i>для</i> людей с таким же тревожным расстройством, как и у меня.
-			Я надеюсь, что это поможет тебе увидеть - с юмором - как работает тревожность.
+			Я надеюсь, что это поможет вам увидеть - с юмором - как работает тревожность.
 			И, возможно, ослабит страх самого страха.
 		</p>
-		<p>
+		<p style="font-size: 16px">
 			Также будут плохо прорисованные человечки и гиперактивный волк.
 			Наслаждайтесь!
 		</p>
-		<p style="color:#999; font-size: 16px; line-height: 1.3em;">
-			Другие примечания: алкоголь, темы сексуального подтекста<span class="hide-if-cuss-free">, д@✩$я ругани</span>
+		<p style="color:#999; font-size: 14px; line-height: 1.3em;">
+			Другие примечания: алкоголь, темы сексуального подтекста<span class="hide-if-cuss-free">, д@#$я ругани</span>
 		</p>
 		<p>
 			<a target="_blank" href="https://ncase.me/mental-health/">Материалы о ментальном здоровье</a>
@@ -210,7 +209,9 @@
 
 Другие переводы!
 <br>
-<a href="https://ncase.me/anxiety/">Original in English</a>
+<a href="https://notdotteam.github.io/anxiety/">Русский (другая версия, мне она не очень понравилась)</a>
+<br>
+<a href="https://ncase.me/anxiety/">English (Original)</a>
 <br>
 <a href="https://nathsom.github.io/ncase-anxiety/">Français</a>
 <br>
