--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 Другие переводы!
 <br>
-<a href="https://notdotteam.github.io/anxiety/">Русский (другая версия, мне она не очень понравилась)</a>
+<a href="https://notdotteam.github.io/anxiety/">Русский (другая версия, но мне она не очень понравилась)</a>
 <br>
 <a href="https://ncase.me/anxiety/">English (Original)</a>
 <br>
