--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 		</div>
 		<div style="float: right; width: 135px; height: 63px;">
 			<!-- TRANSLATE THIS -->
-			Продвигайся
-			<div id="text_automatic_toggle">по клику</div>
+			Продвигаться
+			<div id="text_automatic_toggle">По клику</div>
 		</div>
 		<div style="clear:both"></div>
 		<span id="volume_options">
