--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
 Создано
 <a href="https://ncase.me/" target="_blank">Nicky Case</a>
 <br>
+Перевод от
+<a href="https://vk.com/kanresss" target="_blank">Kanres</a>
+<br>
 Музыка от
 <a href="https://loyaltyfreakmusic.com" target="_blank">Monplaisir</a>
 <br>
