--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 		<div>
 			<!-- TRANSLATE THIS -->
 			Пауза
-			<div>Нажмите в любом месте, чтобы продолжать волноваться</div>
+			<div>
+				Нажмите в любом месте, чтобы продолжать волноваться</div>
 		</div>
 	</div>
 
