--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<meta name="twitter:site" content="@ncasenmare">
 	<meta name="twitter:title" content="Приключения с Тревогой!">  <!-- TRANSLATE: content -->
 	<meta name="twitter:description" content="Сюжетная игра о человеке и его тревоге. Вы играете за тревогу.">  <!-- TRANSLATE: content -->
-	<meta name="twitter:image" content="https://kanress.github.io/AWA/sharing/thumb.png">
+	<meta name="twitter:image" content="https://kanress.github.io/anxiety/sharing/thumb.png">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Приключения с Тревогой!">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://kanress.github.io/AWA/">
-	<meta property="og:image" content="https://kanress.github.io/AWA/sharing/thumb.png">
+	<meta property="og:url" content="https://kanress.github.io/anxiety/">
+	<meta property="og:image" content="https://kanress.github.io/anxiety/sharing/thumb.png">
 	<meta property="og:description" content="Сюжетная игра о человеке и его тревоге. Вы играете за тревогу.">  <!-- TRANSLATE: content -->
 	<meta property="og:site_name" content="Приключения с Тревогой!">  <!-- TRANSLATE: content -->
 	
